[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linak-ctrl"
version = "1.0.5"
requires-python = ">= 3.10"
description = "Control Linak powered desks using USB2LIN06 cable."
dependencies = [
    "pyusb>=1.3.1"
]
readme = "README.rst"
authors = [
    {name = "Roman Dobosz", email = "gryf73@gmail.com"}
]
license = {text = "BSD"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking"
]

[tool.setuptools]
py-modules = ["linak_ctrl"]

[project.urls]
Repository = "https://github.com/gryf/linak-ctrl"

[project.scripts]
linak-ctrl = "linak_ctrl:main"

[tool.distutils.bdist_wheel]
universal = true
