[metadata]
name = linak-ctrl
summary = Control Linak powered desks using USB2LIN06 cable. 
description-file = README.rst
author = Roman Dobosz
author-email = gryf73@gmail.com
home-page = https://gihtub.com/gryf/linak-ctrl
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Networking

[install]
record = install.log

[options.entry_points]
console_scripts =
    linak-ctrl= linak_ctrl:main

[options]
install_requires =
    pyusb

[bdist_wheel]
universal = 1
